--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,21 @@
     <link rel="stylesheet" href="./assets/css/popup.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="credifanaHeader">
+                <div>
+                    <img src="./assets/images/icon.png" alt="">
+                </div>
+                <div>
+                    <h1>Credifana</h1>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="">
 
+    </div>
     <script src="./assets/js/jquery.min.js" type="module"></script>
     <script src="./assets/js/popup.js" type="module"></script>
 </body>
